<resources>
    <string name="app_name">Organizze</string>
    <string name="title_intro_1">Organize suas contas \n de onde estiver</string>
    <string name="title_intro_2">Saiba para onde está \nindo seu dinheiro</string>
    <string name="title_intro_3">Nunca mais se esqueça \n de pagar um conta</string>
    <string name="title_intro_4">Tudo organizado, no \ncelular ou computador</string>
    <string name="description_intro_4">Use no seu smartphone e acesse o \nOrganizze pelo site</string>
    <string name="description_intro_3">Receba alertas quando quiser</string>
    <string name="description_intro_2">Categorizando seus lançamentos e vendo \n o destino de cada centavo</string>
    <string name="description_intro_1">Simples, fácil de usar e grátis</string>
    <string name="crie_sua_conta_gratis">Crie sua conta gratis</string>
    <string name="junte_se">Junte-se a mais de meio milhão\n de pessoas e comesse já</string>
    <string name="cadastre_se">cadastre-se</string>
    <string name="tenho_conta">Já tenho conta</string>
    <string name="crie_sua_conta">Crie sua conta grátis</string>
    <string name="edit_text_nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Principal</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="data">Data</string>
    <string name="categoria">Categoria</string>
    <string name="descricao">Descrição</string>
    <string name="carregando">Carregando...</string>
</resources>