<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.CadastroActivity"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crie_sua_conta"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="24dp"
        />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/edit_text_nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/primary"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termos_de_uso"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"/>

</LinearLayout>